# ocr_lite_paddlepytorch_cpp

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  demo.cpp  qnxtoolchain.cmake
ocr/: cls.cc  cls.h  det.cc  det.h  inference.cc  inference.h  inference_impl.cc  inference_impl.h  rec.cc  rec.h
ocr/data/: god_center_rear_bin  ocr_cls.param  ocr_config.json  ocr_det.param
ocr/tool/: clipper.cc  clipper.h  datatype.h  postprocess_op.cc  postprocess_op.h  util.cc  util.h  utility.cc  utility.h
